--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,8 +14,8 @@
 
 <div class="row extra_margin">
     <div class="col-md text-center">        
-        <a href="https://github.com/{{site.github_username}}" target="_blank" class="text-dark"><i class="fab fa-github-square fa-lg"></i></a>
-        <a href="https://www.facebook.com/{{site.facebook_username}}" target="_blank" class="text-primary"><i class="fab fa-facebook-square fa-lg"></i></a>
+        <a href="https://github.com/{{site.github_username}}" rel="noreferrer" target="_blank" class="text-dark"><i class="fab fa-github-square fa-lg"></i></a>
+        <a href="https://www.facebook.com/{{site.facebook_username}}" rel="noreferrer" target="_blank" class="text-primary"><i class="fab fa-facebook-square fa-lg"></i></a>
         <a href="mailto:{{site.email}}" class="text-success"><i class="fas fa-envelope-square fa-lg"></i></a>      
     </div>
 </div>
